Better Button styling [WIP] Filtering: Clearing,, bugfixes, visible state, still one bug with Select.value

--- a/src/main/scss/filter.scss
+++ b/src/main/scss/filter.scss
@@ -21,6 +21,11 @@
     @include header-panel-look();
     max-width: 600px;
     overflow: visible;
+
+    button {
+      @include button-look();
+      float: right;
+    }
   }
 
   .filter-row, .sort-row {
@@ -28,6 +33,20 @@
     width: 100%;
     clear: both;
     margin-bottom: 20px;
+
+    .filter-input {
+      height: 30px;
+      padding: 0 10px;
+      line-height: 30px;
+      border: 1px solid $color-grey-dark;
+      @include border-radius(3px);
+      outline: none;
+      width: 200px;
+
+      &:focus, &:active {
+        border-color: $color-primary-lighter;
+      }
+    }
 
     .filter-select {
       width: 200px;
@@ -39,30 +58,32 @@
       display: inline-block;
       vertical-align: middle;
       color: $color-text-light-grey;
-      min-width: 90px;
-      text-align: center;
-      line-height: 1;
+      max-width: 200px;
+      padding: 0 20px;
+      text-align: left;
+      line-height: 1.2;
     }
 
   }
 
-  .info {
-    color: $color-text-light-grey;
-    padding-top: 20px;
-    margin-top: 20px;
-    border-top: 2px solid $color-border-grey;
-    line-height: 1.5em;
-    width: 100%;
+  .description-row {
+    .info {
+      color: $color-text-light-grey;
+      padding-top: 20px;
+      margin-top: 20px;
+      border-top: 2px solid $color-border-grey;
+      line-height: 1.5em;
+      width: 100%;
 
-    .text {
-      width: 60%;
-      float: left;
+      .text {
+        width: 50%;
+        float: left;
+      }
     }
-  }
 
-  button {
-    @include button-look();
-    float: right;
+    .filter-go {
+      margin-right: 20px;
+    }
   }
 
 }
