--- a/src/main/scss/rows.scss
+++ b/src/main/scss/rows.scss
@@ -51,21 +51,7 @@
     background-color: white; //overlays the background grid image
 
     .new-row-inner {
-      height: 30px;
-      line-height: 28px;
-      padding: 0 15px;
-      color: white;
-      font-weight: bold;
-      background-color: $color-primary;
-      cursor: pointer;
-      display: inline-block;
-      @include border-radius(3px);
-      @include transition(all 250ms ease-out);
-
-      &:hover {
-        background-color: desaturate(darken($color-primary, 10%), 10%);
-      }
-
+      @include button-look();
     }
 
     i, span {
@@ -74,7 +60,7 @@
 
     i {
       margin-right: 10px;
-      font-size: 20px;
+      font-size: 16px;
 
     }
 
